# gitlabhub-sync-agent

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  githublab-sync.example.yaml  install.sh  pyproject.toml
.claude/agents/: repo-sync.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  sync.yml
packaging/launchd/: com.githublab-sync.plist
scripts/: install-launchd.sh  run-sync.sh
src/githublab_sync/: __init__.py  __main__.py  cli.py  config.py  git_ops.py  logging_utils.py  pull_requests.py  sync.py  text_utils.py
src/githublab_sync/providers/: __init__.py  base.py  github.py  gitlab.py
tests/: test_config.py  test_git_ops.py  test_providers.py  test_sync.py  test_text_utils.py
