[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "githublab-sync"
version = "0.1.0"
description = "Bidirectional mirror and pull-request sync between GitHub and GitLab — open-source double backup."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "GitHubLab Sync contributors" }]
keywords = ["github", "gitlab", "mirror", "backup", "sync", "git", "pull-request", "merge-request"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
githublab-sync = "githublab_sync.cli:main"

[project.urls]
Homepage = "https://github.com/rahmanazhar/gitlabhub-sync-agent"
Repository = "https://github.com/rahmanazhar/gitlabhub-sync-agent"
Issues = "https://github.com/rahmanazhar/gitlabhub-sync-agent/issues"
Changelog = "https://github.com/rahmanazhar/gitlabhub-sync-agent/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/githublab_sync"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.mypy]
# Runtime supports 3.9 (enforced by ruff target-version + CI matrix); mypy
# itself no longer supports analysing as 3.9, so we analyse as 3.10.
python_version = "3.10"
packages = ["githublab_sync"]
mypy_path = "src"
warn_unused_ignores = true
ignore_missing_imports = true
